Fix: update project image, add border styling, and correct typos
Replaced a project image with an updated version.
Added a border to the project image for better visual appeal.
Fixed typos in the about section and other text content for improved readability.

--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
             &#9776;
         </div>
         <div class="mobile-links">
-            <li><a href="./index.html">About</a></li>
-            <li><a href="./work.html">Work</a></li>
-            <li><a href="https://drive.google.com/file/d/1mDBKJtGjjHLGwCkjqGemP_SfZcEsa19m/view?usp=sharing"
-                    target="_blank">Resume</a></li>
-            <li><a href="mailto:jess.icaww0906@gmail.com">Contact</a></li>
+            <ul>
+                <li><a href="./index.html">About</a></li>
+                <li><a href="./work.html">Work</a></li>
+                <li><a href="https://drive.google.com/file/d/1mDBKJtGjjHLGwCkjqGemP_SfZcEsa19m/view?usp=sharing"
+                        target="_blank">Resume</a></li>
+                <li><a href="mailto:jess.icaww0906@gmail.com">Contact</a></li>
             </ul>
     </nav>
 
@@ -47,7 +48,7 @@
         <div class="hero-text">
             <h1>Hi, I'm Jessica!</h1>
             <p>Fascinated by technology and its endless possibilities,
-                <br> my curiousity drives me to learn, innovate, and contribute however I can.
+                <br> my curiosity drives me to learn, innovate, and contribute however I can.
             </p>
             <button onclick="window.location.href='#work'">View My Work</button>
         </div>
@@ -57,26 +58,24 @@
     <div class="about-me" id="about">
         <h1>About Me</h1>
         <div class="about-me-text">
-            <p>Even as a child, I loved to learn. Whether it was memorizing magic tricks on Youtube, or making a whole cardboard arcade in my basement, I had a 
-                knack for trying out new things. I not only realized how far a brain and two hands could get me, but how beautiful, enriching, and transformative
-                 it was for me to <u>try,</u> no matter how many times it took me.</p>
-            <p>If you were wondering where my love for technology comes from, you're gonna have to keep reading. 
-                Long story short, I used to be obsessed with playing video games. It was one of my biggest insecurities,
-                but I realize how it interestingly enough, has turned into one of my biggest blessings. 
-                Why?
-                Well... my love for the specific game, Minecraft, caused me to play nonstop. I eventually got
-                really good at the game, broke a few world records, won competitive tournaments here and there,
-                and decided to upload a few videos on my gameplay.
-                Sooner or later, I started gaining traction and decided I wanted to take Youtube seriously. I self-taught
-                myself different video and photo editing software, and ended up gaining over 200,000 subscribers on Youtube
-                and 40,000 followers on Twitch.
+            <p>Even as a child, I loved to learn. Whether it was memorizing magic tricks on YouTube or building an
+                entire cardboard arcade in my basement, I had a knack for trying new things. I realized not only how far
+                curiousity and determination could take me but also how enriching and transformative the process of
+                learning could be—no matter how many attempts it took.</p>
+            <p>If you’re wondering where my love for technology comes from, here’s the unexpected answer: video games.
+                For a long time, gaming was one of my biggest insecurities, but I now see how it turned into one of my
+                greatest blessings. My obsession with Minecraft led me to play nonstop, and over time, I got really
+                good. I broke a few world records, won competitive tournaments, and eventually decided to upload videos
+                of my gameplay. Before I knew it, I was gaining traction and made the decision to take YouTube
+                seriously. I taught myself video and photo editing, and through persistence, I grew to over 200,000
+                subscribers on YouTube and 40,000 followers on Twitch.
             </p>
-            <p>Cultivating an online community and bearing it's various responsibilities has taught me about the importance of
-                skills like communication, storytelling, adaptability, collaboration, time-management,
-            problem-solving, and creativity. But even more than this, I gained a reason and a purpose to use technology in hopes to
-            provide value to people. Whether it's creating videos to writing code, I'm passionate about exploring tech and contributing
-            in any way I can.
-        </p>
+            <p>Cultivating an online community and taking on its many responsibilities taught me invaluable
+                skills—communication, storytelling, adaptability, collaboration, time management, problem-solving, and
+                creativity. But beyond that, it gave me a purpose: to use technology to provide value to others. Whether
+                through content creation or coding, I’m passionate about using technology as a tool to create, inspire,
+                and bring people together in meaningful ways.
+            </p>
         </div>
     </div>
 
@@ -112,7 +111,8 @@
                     <div class="box">
                         <img src="./imgs/church.png" alt="Picture at church">
                         <div class="overlay">
-                            <p>This is one of my favorite places to be! I love my church community and am beyond grateful for them.</p>
+                            <p>This is one of my favorite places to be! I love my church community and am beyond
+                                grateful for them.</p>
                         </div>
                     </div>
                     <h5>At church!</h5>
@@ -133,78 +133,77 @@
     </div>
 
 
-        <!-- Skills Section -->
-        <div class="skills" id="work">
-            <h1>Skills</h1>
-            <div class="skills-container-container">
-                <div class="left-side">
-                    <div class="skills-container">
-                        <h3>Video Editing</h3>
-                        <div class="icon-container">
-                            <div class="icon">
-                                <img src="./imgs/adobe-premiere-pro-icon.svg" alt="Premiere Pro" width="50px">
-                                <p>Adobe Premiere Pro</p>
-                            </div>
-                            <div class="icon">
-                                <img src="./imgs/sony-vegas-logo-icon.svg" alt="VEGAS Pro" width="50px">
-                                <p>VEGAS Pro</p>
-                            </div>
-                            <div class="icon">
-                                <img src="./imgs/icons8-davinci-resolve.svg" alt="DaVinci Resolve" width="50px"
-                                    id="davinci">
-                                <p>DaVinci Resolve</p>
-                            </div>
+    <!-- Skills Section -->
+    <div class="skills" id="work">
+        <h1>Skills</h1>
+        <div class="skills-container-container">
+            <div class="left-side">
+                <div class="skills-container">
+                    <h3>Video Editing</h3>
+                    <div class="icon-container">
+                        <div class="icon">
+                            <img src="./imgs/adobe-premiere-pro-icon.svg" alt="Premiere Pro" width="50px">
+                            <p>Adobe Premiere Pro</p>
                         </div>
-                    </div>
-                    <div class="skills-container">
-                        <h3>Photo Editing</h3>
-                        <div class="icon-container">
-                            <div class="icon">
-                                <img src="./imgs/canva-icon.svg" alt="Canva" width="50px">
-                                <p>Canva</p>
-                            </div>
-                            <div class="icon">
-                                <img src="./imgs/adobe-photoshop-icon.svg" alt="Adobe Photoshop" width="50px">
-                                <p>Adobe Photoshop</p>
-                            </div>
+                        <div class="icon">
+                            <img src="./imgs/sony-vegas-logo-icon.svg" alt="VEGAS Pro" width="50px">
+                            <p>VEGAS Pro</p>
+                        </div>
+                        <div class="icon">
+                            <img src="./imgs/icons8-davinci-resolve.svg" alt="DaVinci Resolve" width="50px"
+                                id="davinci">
+                            <p>DaVinci Resolve</p>
                         </div>
                     </div>
                 </div>
-                <div class="right-side">
-                    <div class="skills-container">
-                        <h3>Web Development</h3>
-                        <div class="icon-container">
-                            <div class="icon">
-                                <img src="./imgs/html-icon.svg" alt="HTML" width="50px">
-                                <p>HTML</p>
-                            </div>
-                            <div class="icon">
-                                <img src="./imgs/css-icon.svg" alt="CSS" width="50px">
-                                <p>CSS</p>
-                            </div>
-                            <div class="icon">
-                                <img src="./imgs/javascript-programming-language-icon.svg" alt="JavaScript"
-                                    width="50px">
-                                <p>JavaScript</p>
-                            </div>
+                <div class="skills-container">
+                    <h3>Photo Editing</h3>
+                    <div class="icon-container">
+                        <div class="icon">
+                            <img src="./imgs/canva-icon.svg" alt="Canva" width="50px">
+                            <p>Canva</p>
+                        </div>
+                        <div class="icon">
+                            <img src="./imgs/adobe-photoshop-icon.svg" alt="Adobe Photoshop" width="50px">
+                            <p>Adobe Photoshop</p>
                         </div>
                     </div>
-                    <div class="skills-container">
-                        <h3>Programming</h3>
-                        <div class="icon-container">
-                            <div class="icon">
-                                <img src="./imgs/c-plus-plus-programming-language-icon.svg" alt="C++" width="50px">
-                                <p>C++</p>
-                            </div>
-                            <div class="icon">
-                                <img src="./imgs/java-programming-language-icon.svg" alt="Java" width="50px">
-                                <p>Java</p>
-                            </div>
+                </div>
+            </div>
+            <div class="right-side">
+                <div class="skills-container">
+                    <h3>Web Development</h3>
+                    <div class="icon-container">
+                        <div class="icon">
+                            <img src="./imgs/html-icon.svg" alt="HTML" width="50px">
+                            <p>HTML</p>
+                        </div>
+                        <div class="icon">
+                            <img src="./imgs/css-icon.svg" alt="CSS" width="50px">
+                            <p>CSS</p>
+                        </div>
+                        <div class="icon">
+                            <img src="./imgs/javascript-programming-language-icon.svg" alt="JavaScript" width="50px">
+                            <p>JavaScript</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="skills-container">
+                    <h3>Programming</h3>
+                    <div class="icon-container">
+                        <div class="icon">
+                            <img src="./imgs/c-plus-plus-programming-language-icon.svg" alt="C++" width="50px">
+                            <p>C++</p>
+                        </div>
+                        <div class="icon">
+                            <img src="./imgs/java-programming-language-icon.svg" alt="Java" width="50px">
+                            <p>Java</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
     </div>
 
@@ -213,7 +212,9 @@
         <h1>Projects</h1>
         <div class="project-container-container">
             <div class="project-container">
+                <div class="project-img">
                 <img src="./imgs/church-website.png" alt="Church Website">
+            </div>
                 <h4>Church Website</h4>
                 <p>Built a website for my church to easily access information, events, links, but also to reach those
                     who are in
@@ -231,7 +232,9 @@
                 </div>
             </div>
             <div class="project-container">
+                <div class="project-img">
                 <img src="./imgs/personal-website.png" alt="Personal Website">
+            </div>
                 <h4>Personal Website</h4>
                 <p>Built a website that you are currently browsing! The purpose of this website is to showcase my
                     portfolio,
