Update "About Me" layout and styling for improved readability
- Improved vertical alignment and spacing of content.
- Enhanced styling for headings and paragraphs.
- Adjusted highlight and bold animations for better emphasis.

--- a/index.html
+++ b/index.html
@@ -58,24 +58,14 @@
     <div class="about-me" id="about">
         <h1>About Me</h1>
         <div class="about-me-text">
-            <p>Even as a child, I loved to learn. Whether it was memorizing magic tricks on YouTube or building an
-                entire cardboard arcade in my basement, I had a knack for trying new things. I realized not only how far
-                curiousity and determination could take me but also how enriching and transformative the process of
-                learning could be—no matter how many attempts it took.</p>
-            <p>If you’re wondering where my love for technology comes from, here’s the unexpected answer: video games.
-                For a long time, gaming was one of my biggest insecurities, but I now see how it turned into one of my
-                greatest blessings. My obsession with Minecraft led me to play nonstop, and over time, I got really
-                good. I broke a few world records, won competitive tournaments, and eventually decided to upload videos
-                of my gameplay. Before I knew it, I was gaining traction and made the decision to take YouTube
-                seriously. I taught myself video and photo editing, and through persistence, I grew to over 200,000
-                subscribers on YouTube and 40,000 followers on Twitch.
+            <p>Whether it was building a cardboard arcade as a kid or memorizing magic tricks to become a magician, I’ve always loved trying new things.</p>
+            <p>Funny enough, my love for tech started with Minecraft. What began as a way to unwind quickly sparked my curiosity and pushed me to keep learning, building, and creating. 
+                <span class="highlighted">I broke world records, won competitive tournaments,</span> and eventually thought: <em>Why keep this to myself?</em>
             </p>
-            <p>Cultivating an online community and taking on its many responsibilities taught me invaluable
-                skills—communication, storytelling, adaptability, collaboration, time management, problem-solving, and
-                creativity. But beyond that, it gave me a purpose: to use technology to provide value to others. Whether
-                through content creation or coding, I’m passionate about using technology as a tool to create, inspire,
-                and bring people together in meaningful ways.
-            </p>
+            <p>That hobby turned into a YouTube channel with over <b>200,000 subscribers and 22 million views</b>, along with a Twitch community of 40,000 followers.</p>
+            <p>Through content creation, I was able to teach myself how to edit, storytell, and communicate effectively. But more than anything, I discovered purpose—using technology to
+                <span class="highlighted">create, connect, and inspire others.</span>
+            </p>            
         </div>
     </div>
 
@@ -213,8 +203,8 @@
         <div class="project-container-container">
             <div class="project-container">
                 <div class="project-img">
-                <img src="./imgs/church-website.png" alt="Church Website">
-            </div>
+                    <img src="./imgs/church-website.png" alt="Church Website">
+                </div>
                 <h4>Church Website</h4>
                 <p>Built a website for my church to easily access information, events, links, but also to reach those
                     who are in
@@ -233,8 +223,8 @@
             </div>
             <div class="project-container">
                 <div class="project-img">
-                <img src="./imgs/personal-website.png" alt="Personal Website">
-            </div>
+                    <img src="./imgs/personal-website.png" alt="Personal Website">
+                </div>
                 <h4>Personal Website</h4>
                 <p>Built a website that you are currently browsing! The purpose of this website is to showcase my
                     portfolio,
