Updated card design and font styling for improved aesthetics.
- Made text more concise.
- Increased font weight for more emphasis.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <p>Funny enough, my love for tech started with Minecraft. What began as a way to unwind quickly sparked my curiosity and pushed me to keep learning, building, and creating. 
                 <span class="highlighted">I broke world records, won competitive tournaments,</span> and eventually thought: <em>Why keep this to myself?</em>
             </p>
-            <p>That hobby turned into a YouTube channel with over <b>200,000 subscribers and 22 million views</b>, along with a Twitch community of 40,000 followers.</p>
+            <p>This hobby turned into a YouTube channel with over <b>200,000 subscribers and 22 million views</b>, along with a Twitch community of 40,000 followers.</p>
             <p>Through content creation, I was able to teach myself how to edit, storytell, and communicate effectively. But more than anything, I discovered purpose—using technology to
                 <span class="highlighted">create, connect, and inspire others.</span>
             </p>            
@@ -89,8 +89,7 @@
                     <div class="box">
                         <img src="./imgs/ball.png" alt="Picture playing basketball">
                         <div class="overlay">
-                            <p>I started playing basketball in middle school and still play from time to time!
-                                <br>(P.S. I learned my handles from Youtube...)
+                            <p>Started in middle school and learned my handles from Youtube...
                             </p>
                         </div>
                     </div>
@@ -101,8 +100,7 @@
                     <div class="box">
                         <img src="./imgs/church.png" alt="Picture at church">
                         <div class="overlay">
-                            <p>This is one of my favorite places to be! I love my church community and am beyond
-                                grateful for them.</p>
+                            <p>One of my favorite places!<br> I am beyond grateful for my church community.</p>
                         </div>
                     </div>
                     <h5>At church!</h5>
@@ -112,8 +110,8 @@
                     <div class="box">
                         <img src="./imgs/canes.png" alt="Picture holding Raising Cane's">
                         <div class="overlay">
-                            <p>I discovered Raising Cane's in 2021 when visiting my friends in Cali.
-                                We had it 4 times that week, and since then, life has never been the same.</p>
+                            <p>
+                                While visiting friends in Cali, I discovered this gem... and ate Canes four times that week!
                         </div>
                     </div>
                     <h5>Eating Canes!</h5>
