Fixed spacing throughout page.

--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
                     <div class="icon-container">
                         <div class="icon">
                             <img src="./imgs/adobe-premiere-pro-icon.svg" alt="Premiere Pro" width="50px">
-                            <p>Adobe Premiere Pro</p>
+                            <p>Premiere</p>
                         </div>
                         <div class="icon">
                             <img src="./imgs/sony-vegas-logo-icon.svg" alt="VEGAS Pro" width="50px">
-                            <p>VEGAS Pro</p>
+                            <p>VEGAS</p>
                         </div>
                         <div class="icon">
                             <img src="./imgs/icons8-davinci-resolve.svg" alt="DaVinci Resolve" width="50px"
