Updated "Skills" and "Projects" sections.
- Implemented a carousel slider for skills section.
- Added a call-to-action button that allows users to view projects.

--- a/index.html
+++ b/index.html
@@ -122,23 +122,23 @@
 
 
     <!-- Skills Section -->
-    <div class="skills" id="work">
+    <div class="skills">
         <h1>Skills</h1>
         <div class="skills-container-container">
             <div class="left-side">
                 <div class="skills-container">
                     <h3>Video Editing</h3>
-                    <div class="icon-container">
+                    <div class="icon-group">
                         <div class="icon">
-                            <img src="./imgs/adobe-premiere-pro-icon.svg" alt="Premiere Pro" width="50px">
+                            <img src="./imgs/adobe-premiere-pro-icon.svg" alt="Premiere Pro">
                             <p>Premiere</p>
                         </div>
                         <div class="icon">
-                            <img src="./imgs/sony-vegas-logo-icon.svg" alt="VEGAS Pro" width="50px">
+                            <img src="./imgs/sony-vegas-logo-icon.svg" alt="VEGAS Pro">
                             <p>VEGAS</p>
                         </div>
                         <div class="icon">
-                            <img src="./imgs/icons8-davinci-resolve.svg" alt="DaVinci Resolve" width="50px"
+                            <img src="./imgs/icons8-davinci-resolve.svg" alt="DaVinci Resolve"
                                 id="davinci">
                             <p>DaVinci Resolve</p>
                         </div>
@@ -146,14 +146,14 @@
                 </div>
                 <div class="skills-container">
                     <h3>Photo Editing</h3>
-                    <div class="icon-container">
+                    <div class="icon-group">
                         <div class="icon">
-                            <img src="./imgs/canva-icon.svg" alt="Canva" width="50px">
+                            <img src="./imgs/canva-icon.svg" alt="Canva">
                             <p>Canva</p>
                         </div>
                         <div class="icon">
-                            <img src="./imgs/adobe-photoshop-icon.svg" alt="Adobe Photoshop" width="50px">
-                            <p>Adobe Photoshop</p>
+                            <img src="./imgs/adobe-photoshop-icon.svg" alt="Adobe Photoshop">
+                            <p>Photoshop</p>
                         </div>
                     </div>
                 </div>
@@ -161,30 +161,68 @@
             <div class="right-side">
                 <div class="skills-container">
                     <h3>Web Development</h3>
-                    <div class="icon-container">
+                    <div class="slider-track">
+                    <div class="icon-slide">
                         <div class="icon">
-                            <img src="./imgs/html-icon.svg" alt="HTML" width="50px">
+                            <img src="./imgs/html-icon.svg" alt="HTML">
                             <p>HTML</p>
                         </div>
                         <div class="icon">
-                            <img src="./imgs/css-icon.svg" alt="CSS" width="50px">
+                            <img src="./imgs/css-icon.svg" alt="CSS">
                             <p>CSS</p>
                         </div>
                         <div class="icon">
-                            <img src="./imgs/javascript-programming-language-icon.svg" alt="JavaScript" width="50px">
-                            <p>JavaScript</p>
+                            <img src="./imgs/javascript-programming-language-icon.svg" alt="JavaScript">
+                            <p>JavaSript</p>
+                        </div>
+                        <div class="icon">
+                            <img src="./imgs/nodejs.svg" alt="NodeJS">
+                            <p>NodeJS</p>
+                        </div>
+                        <div class="icon">
+                            <img src="./imgs/expressjs.svg" alt="ExpressJS">
+                            <p>ExpressJS</p>
+                        </div>
+                        <div class="icon">
+                            <img src="./imgs/bootstrap.svg" alt="Bootstrap" id="bootstrap">
+                            <p>Bootstrap</p>
+                        </div>
+                        <div class="icon">
+                            <img src="./imgs/html-icon.svg" alt="HTML">
+                            <p>HTML</p>
+                        </div>
+                        <div class="icon">
+                            <img src="./imgs/css-icon.svg" alt="CSS">
+                            <p>CSS</p>
+                        </div>
+                        <div class="icon">
+                            <img src="./imgs/javascript-programming-language-icon.svg" alt="JavaScript">
+                            <p>JavaSript</p>
+                        </div>
+                        <div class="icon">
+                            <img src="./imgs/nodejs.svg" alt="NodeJS">
+                            <p>NodeJS</p>
+                        </div>
+                        <div class="icon">
+                            <img src="./imgs/expressjs.svg" alt="ExpressJS">
+                            <p>ExpressJS</p>
+                        </div>
+                        <div class="icon">
+                            <img src="./imgs/bootstrap.svg" alt="Bootstrap">
+                            <p>Bootstrap</p>
                         </div>
                     </div>
                 </div>
+                </div>
                 <div class="skills-container">
                     <h3>Programming</h3>
-                    <div class="icon-container">
+                    <div class="icon-group">
                         <div class="icon">
-                            <img src="./imgs/c-plus-plus-programming-language-icon.svg" alt="C++" width="50px">
+                            <img src="./imgs/c-plus-plus-programming-language-icon.svg" alt="C++">
                             <p>C++</p>
                         </div>
                         <div class="icon">
-                            <img src="./imgs/java-programming-language-icon.svg" alt="Java" width="50px">
+                            <img src="./imgs/java-programming-language-icon.svg" alt="Java">
                             <p>Java</p>
                         </div>
                     </div>
@@ -196,7 +234,7 @@
     </div>
 
     <!-- Projects Section -->
-    <div class="projects">
+    <div class="projects" id="work">
         <h1>Projects</h1>
         <div class="project-container-container">
             <div class="project-container">
@@ -208,36 +246,22 @@
                     who are in
                     search
                     for a church.</p>
-                <div class="project-icon-container">
-                    <div class="project-icon">
-                        <img src="imgs/html-icon.svg" alt="HTML5 Icon">
-                        <p>HTML5</p>
-                    </div>
-                    <div class="project-icon">
-                        <img src="imgs/css-icon.svg" alt="CSS5 Icon">
-                        <p>CSS5</p>
-                    </div>
-                </div>
+                <a href="https://csci-355-group-project.vercel.app" target="_blank">
+                    <button>Click Me!</button>
+                </a>
             </div>
             <div class="project-container">
                 <div class="project-img">
                     <img src="./imgs/personal-website.png" alt="Personal Website">
                 </div>
                 <h4>Personal Website</h4>
-                <p>Built a website that you are currently browsing! The purpose of this website is to showcase my
+                <p>Built the website that you are currently browsing! The purpose of this website is to showcase my
                     portfolio,
                     and
                     share a little bit about who I am!</p>
-                <div class="project-icon-container">
-                    <div class="project-icon">
-                        <img src="./imgs/html-icon.svg" alt="HTML5 Icon">
-                        <p>HTML5</p>
-                    </div>
-                    <div class="project-icon">
-                        <img src="./imgs/css-icon.svg" alt="CSS5 Icon">
-                        <p>CSS5</p>
-                    </div>
-                </div>
+                <a href="https://jess-icaww.github.io/">
+                    <button>Click Me!</button>
+                </a>
             </div>
         </div>
     </div>
