Update Project link

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     who are in
                     search
                     for a church.</p>
-                <a href="https://csci-355-group-project.vercel.app" target="_blank">
+                <a href="https://github.com/jess-icaww/Convergence-Church-Website" target="_blank">
                     <button>Click Me!</button>
                 </a>
             </div>
