--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     <div class="about-me" id="about">
         <h1>About Me</h1>
         <div class="about-me-text">
-            <p>Whether it was building a cardboard arcade as a kid, memorizing <br>magic tricks, or exploring different hobbies, I always loved trying new things.</p>
+            <p>Whether it was building a cardboard arcade as a kid, memorizing magic tricks, or exploring different hobbies, I always loved trying new things.</p>
             <p>Funny enough, my love for tech started with Minecraft. What began as a way to unwind quickly sparked my curiosity and pushed me to keep learning, building, and creating. 
-                <span class="highlighted">I broke world records, won competitive tournaments</span>, and eventually thought: <em>Why keep this to myself?</em>
+                <span class="highlighted">I broke world records, won competitive tournaments,</span> and eventually thought: <em>Why keep this to myself?</em>
             </p>
             <p>This hobby of mine turned into a YouTube channel with over <b>200,000 subscribers</b> and <b>22 million views</b>, along with a Twitch community of 40,000 followers.</p>
             <p>Through content creation, I was able to teach myself how to edit, storytell, and communicate effectively. But more than anything, I discovered purpose—using technology to
