--- a/index.html
+++ b/index.html
@@ -32,18 +32,19 @@
         </div>
         <div class="mobile-links">
             <ul>
-                <li><a href="./index.html">About</a></li>
-                <li><a href="./work.html">Work</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#work">Work</a></li>
                 <li><a href="https://drive.google.com/file/d/1mDBKJtGjjHLGwCkjqGemP_SfZcEsa19m/view?usp=sharing"
                         target="_blank">Resume</a></li>
                 <li><a href="mailto:jess.icaww0906@gmail.com">Contact</a></li>
             </ul>
+        </div>
     </nav>
 
     <!-- Hero Section-->
     <div class="hero-container">
         <div class="img-container">
-            <img src="./imgs/me.png" alt="" id="hero-img">
+            <img src="./imgs/me.png" alt="Picture of me!" id="hero-img">
         </div>
         <div class="hero-text">
             <h1>Hi, I'm Jessica!</h1>
@@ -60,7 +61,7 @@
         <div class="about-me-text">
             <p>Whether it was building a cardboard arcade as a kid, memorizing magic tricks, or exploring different hobbies, I always loved trying new things.</p>
             <p>Funny enough, my love for tech started with Minecraft. What began as a way to unwind quickly sparked my curiosity and pushed me to keep learning, building, and creating. 
-                <span class="highlighted">I broke world records, won competitive tournaments,</span> and eventually thought: <em>Why keep this to myself?</em>
+                <span class="highlighted">I broke world records,</span>  won competitive tournaments, and eventually thought: <em>Why keep this to myself?</em>
             </p>
             <p>This hobby of mine turned into a YouTube channel with over <b>200,000 subscribers</b> and <b>22 million views</b>, along with a Twitch community of 40,000 followers.</p>
             <p>Through content creation, I was able to teach myself how to edit, storytell, and communicate effectively. But more than anything, I discovered purpose—using technology to
@@ -173,7 +174,7 @@
                         </div>
                         <div class="icon">
                             <img src="./imgs/javascript-programming-language-icon.svg" alt="JavaScript">
-                            <p>JavaSript</p>
+                            <p>JavaScript</p>
                         </div>
                         <div class="icon">
                             <img src="./imgs/nodejs.svg" alt="NodeJS">
