Updated About Me Section - Made text more conscise. - Changed animations/effects for emphasis on certain phrases. - Changed padding for a cleaner view.

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
     <div class="about-me" id="about">
         <h1>About Me</h1>
         <div class="about-me-text">
-            <p>Whether it was building a cardboard arcade as a kid, memorizing magic tricks, or exploring different hobbies, I always loved trying new things.</p>
-            <p>Funny enough, my love for tech started with Minecraft. What began as a way to unwind quickly sparked my curiosity and pushed me to keep learning, building, and creating. 
-                <span class="highlighted">I broke world records,</span>  won competitive tournaments, and eventually thought: <em>Why keep this to myself?</em>
+            <p>I've always been drawn to creating, whether it was building an entire cardboard arcade or miniature vending machines as a kid - if there was something new I could try, I was all in.</p>
+            <p>Funny enough, my love for tech started with Minecraft. What began as a way to unwind quickly turned into a creative playground that pushed me to think critically, continue learning, and start pushing boundaries. Before I knew it, that curiousity snowballed into something bigger.
+                <b>I broke world records, won competitive tournaments,</b> and eventually thought: <em>Why not share this with others?</em>
             </p>
-            <p>This hobby of mine turned into a YouTube channel with over <b>200,000 subscribers</b> and <b>22 million views</b>, along with a Twitch community of 40,000 followers.</p>
-            <p>Through content creation, I was able to teach myself how to edit, storytell, and communicate effectively. But more than anything, I discovered purpose—using technology to
-                <span class="highlighted">create, connect, and inspire others.</span>
+            <p>This once hobby of mine, turned into a YouTube channel with over <span class="highlighted">200,000 subscribers and 22 million views</span><br> along with a Twitch community of 40,000 followers.</p>
+            <p>These experiences taught me how to engage with people, communicate effectively, and teach myself skills I never thought I'd learn. But more than anything, it revealed a deeper purpose - to use technology to
+                <b>create, connect, and inspire others.</b>
             </p>            
         </div>
     </div>
